# identity-resolution

./: .flake8  .gitignore  README.md  config.py  contrastive_metric.py  cosine_metric.py  data.py  embedding_logger.py  eval.py  gather_repository.py  load_bad_data.py  match.py  metric.py  model.py  model_classifier.py  model_cli.py  prepare_data.py  pyproject.toml  report.py  report_classifier.py  requirements.txt  tboard.bat  test.py  train.py  train_classifier.py  train_classifier_opts.yaml  train_opts.yaml
civis_app/: prepare_data.py  requirements.txt  run_search.py  utils.py
data/: combine_csvs.py  generate_synthetic_data.py  load_duplicates.sql  load_uniques.sql
idrt/: config.py  contrastive_metric.py  cosine_metric.py  data.py  eval.py  match.py  metric.py  model.py  model_classifier.py  model_cli.py  prepare_data.py  report.py  report_classifier.py  train.py  train_classifier.py  train_classifier_yaml.py  train_yaml.py  utilities.py
idrt/algorithm/: __init__.py  database_adapter.py  prepare_data.py  redshift_db_adapter.py  requirements.txt  run_search.py  utils.py
spec/: contrastive_metric_spec.py
